make div more responsive

--- a/HTMLandCSS/index.html
+++ b/HTMLandCSS/index.html
@@ -6,13 +6,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Increase your IQ on Countries</title>
-  
+
     <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
-    
-<script src="main.js"></script>
+    <!-- we have two parts 1.interactive heading part and main body part. -->
+    <div class="heading">
+        <h1 id="list1">World Countries List</h1>
+        <h3 id="list2">Total number of countries</h3>
+        <!-- function to show the number of countries comes here -->
+        <div id="totalCountries"></div>
+        <input type="radio" name="radio" id="button1">
+        <label for="button1">Search with start word</label>
+        <input type="radio" name="radio" id="button2">
+        <label for="button2">Search with multiple words</label>
+        <input id="search-input" type="text" placeholder="Search Country. . . " />
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+    <script src="main.js"></script>
 </body>
 
 </html>
